# bilibili-mcp-server

./: .gitignore  README.md  app.py  commit_msg.txt  mcp.json.example  pyproject.toml  requirements.txt
src/bilibili_mcp/: aicu.py  bilibili.py  live_content.py  server.py
tests/: test_aicu.py  test_bilibili.py  test_live_content.py
