[project]
name = "bilibili-live-mcp"
version = "0.1.0"
description = "B站 MCP Server - 查询直播状态、粉丝牌、历史评论、历史弹幕，支持直播内容 ASR+视觉分析"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "imageio-ffmpeg>=0.6.0",
]

[project.scripts]
bilibili-live-mcp = "bilibili_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bilibili_mcp"]
